--- a/style.css
+++ b/style.css
@@ -174,6 +174,18 @@ form button[type="submit"]:hover,.recipe button:hover,.recipe-close-btn:hover{
     justify-content: center;
     color: #ffff;
 }
+main{
+    height: 80vh;
+}
+footer{
+    background-color:#212121;
+    color:white;
+    width: 100vw;
+    font-size:1.2rem;
+    text-align: center;
+    position: fixed;
+    padding:15px;
+}
 /* responsive code */
 @media screen and (max-width:600px){
     header nav{
@@ -182,5 +194,10 @@ form button[type="submit"]:hover,.recipe button:hover,.recipe-close-btn:hover{
     header nav form{
         width:80%;
         margin-top: 20px;
+    }
+    footer{
+        min-height: 10vh;
+        min-width: 100%;
+        
     }
 }
